--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <title>HW06</title>
   </head>
   <body>
-    <button type="button">PUSH ME</button>
+    <button class="button" type="button">PUSH ME</button>
 
-    <script type="module" src="/js/task-1.js"></script>
-    <script type="module" src="/js/task-2.js"></script>
-    <script type="module" src="/js/task-3.js"></script>
+    <script type="module" src="./js/task-1.js"></script>
+    <script type="module" src="./js/task-2.js"></script>
+    <script type="module" src="./js/task-3.js"></script>
   </body>
 </html>
